Mayuran/align issue (#5509)
* fix: align issue

* fix: coming soon wrapper

--- a/src/features/styles/theme/card.scss
+++ b/src/features/styles/theme/card.scss
@@ -9,7 +9,7 @@
 }
 .coming_soon_wrapper {
     position: absolute;
-    max-inline-size: 10rem;
+    max-inline-size: 15rem;
     max-block-size: 2.5rem;
     background-color: $color-grey-8;
     border-radius: 0.5rem;
